--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#FF4081</color>
     <color name="fund_red">#ff4e49</color>
     <color name="fund_white">#fdfdfd</color>
+    <color name="fund_background">#f8f8f8</color>
 </resources>
