--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,5 +2,10 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
-    <dimen name="bar_heigth">46dp</dimen>
+    <dimen name="bar_height">50dp</dimen>
+    <dimen name="bar_text_size">18dp</dimen>
+    <dimen name="footer_text_size">10dp</dimen>
+    <dimen name="footer_height">40dp</dimen>
+    <dimen name="footer_marginTop">5dp</dimen>
+    <dimen name="footer_marginBottom">2dp</dimen>
 </resources>
