--- a/app/src/main/res/layout/banner_module.xml
+++ b/app/src/main/res/layout/banner_module.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="85dp">
+    android:layout_height="@dimen/banner_height"
+    android:background="#000">
 
     <android.support.v4.view.ViewPager
         android:layout_width="fill_parent"
