--- a/app/src/main/res/layout/main_page.xml
+++ b/app/src/main/res/layout/main_page.xml
@@ -17,9 +17,9 @@
     <com.handmark.pulltorefresh.library.PullToRefreshListView
         android:id="@+id/lv"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_centerHorizontal="true"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/include"
+        android:layout_marginTop="-1.5dp"
         android:layout_above="@+id/include2">
 
 
