--- a/app/src/main/res/layout/subject_y_module.xml
+++ b/app/src/main/res/layout/subject_y_module.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="@dimen/banner_height">
+    android:layout_height="match_parent">
 
 
     <TextView
@@ -11,6 +11,6 @@
         android:textAlignment="center"
         android:gravity="center"
         android:text="跃进宝"
-        android:id="@+id/textView4"
+        android:id="@+id/y_subject_tv"
         android:layout_gravity="center_horizontal" />
 </LinearLayout>
