--- a/app/src/main/res/layout/commen_footer.xml
+++ b/app/src/main/res/layout/commen_footer.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="match_parent"
+    android:background="@color/fund_background"
     android:layout_height="50dp">
     <View android:layout_height="1px" android:background="@color/separate_line" android:layout_width="fill_parent"></View>
 
