--- a/app/src/main/res/layout/main_page.xml
+++ b/app/src/main/res/layout/main_page.xml
@@ -28,10 +28,10 @@
     <include layout="@layout/commen_footer"
         android:layout_width="match_parent"
         android:layout_height="@dimen/footer_height"
-        android:layout_alignParentBottom="true"
         android:layout_marginTop="@dimen/footer_marginTop"
         android:layout_marginBottom="@dimen/footer_marginBottom"
-        android:id="@+id/include2"></include>
+        android:id="@+id/include2"
+        android:layout_alignParentBottom="true"></include>
 
 
 </RelativeLayout>
