--- a/app/src/main/res/layout/subject_x_module.xml
+++ b/app/src/main/res/layout/subject_x_module.xml
@@ -1,16 +1,190 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:fund="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:paddingTop="16dp"
+    android:paddingLeft="6dp"
+    android:paddingRight="6dp"
+    android:layout_height="match_parent"
+    >
 
-
-    <TextView
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/banner_height"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textAlignment="center"
-        android:gravity="center"
-        android:text="新手标"
-        android:id="@+id/x_subject_tv"
-        android:layout_gravity="center_horizontal" />
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="22dp"
+            android:textColor="@color/fund_white"
+            android:id="@+id/linearLayout">
+            <TextView
+                android:layout_weight="1"
+                android:layout_width="match_parent"
+                android:layout_height="22dp"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:gravity="center_vertical|left"
+                android:text="新手专享"
+                android:paddingLeft="10dp"
+                android:textSize="12dp"
+                android:textColor="@color/fund_white"
+                android:id="@+id/x_subject_tv_title"
+                android:background="@color/fund_yellow"
+                android:layout_gravity="center_horizontal"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentStart="true" />
+
+            <TextView
+                android:layout_weight="1"
+                android:layout_width="match_parent"
+                android:layout_height="22dp"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:gravity="center_vertical|right"
+                android:text="1人已加入"
+                android:textSize="12dp"
+                android:paddingRight="10dp"
+                android:textColor="@color/fund_white"
+                android:id="@+id/x_subject_tv_tCount"
+                android:background="@color/fund_yellow"
+                android:layout_gravity="center_horizontal" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:orientation="horizontal"
+            android:layout_below="@+id/linearLayout"
+            android:background="@color/white"
+            android:id="@+id/linearLayout2"
+            android:weightSum="1">
+                <LinearLayout
+                    android:layout_width="129dp"
+                    android:layout_height="88dp"
+                    android:orientation="vertical"
+                    android:layout_weight="0.94">
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="22dp"
+                        android:paddingLeft="10dp"
+                        android:gravity="center_vertical|left"
+                        android:text="预期年化"
+                        android:textSize="12dp"/>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:orientation="horizontal"
+                        android:layout_height="55dp">
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="55dp"
+                            android:gravity="left"
+                            android:paddingLeft="12dp"
+                            android:text="99"
+                            android:id="@+id/x_subject_tv_yeild"
+                            android:textSize="40dp"/>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="55dp"
+                            android:text="%"
+                            android:textSize="14dp"/>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="55dp"
+                            android:gravity="left"
+                            android:paddingLeft="5dp"
+                            android:text="15天"
+                            android:id="@+id/x_subject_tv_days"
+                            android:textSize="14dp"/>
+                    </LinearLayout>
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="11dp"
+                        android:gravity="left"/>
+                </LinearLayout>
+
+            <cn.efunding.fund.view.RoundPregressBarView
+                android:layout_gravity="center"
+                android:layout_marginRight="15dp"
+                android:id="@+id/roundProgressBar2"
+                android:layout_width="62dp"
+                android:layout_height="62dp"
+                fund:roundColor="@color/fund_yellow"
+                fund:roundProgressColor="@color/fund_yellow"
+                fund:roundWidth="3px"
+                fund:textColor="@color/fund_yellow"
+                fund:textIsDisplayable="true"
+                fund:textSize="12dp"
+                fund:text="不限量"
+                android:layout_centerHorizontal="true"
+                android:layout_below="@+id/include5"
+                android:layout_above="@+id/include6" />
+
+
+        </LinearLayout>
+
+        <View
+
+            android:layout_height="1dp"
+            android:background="@color/separate_line"
+            android:layout_width="match_parent"
+            android:layout_below="@+id/linearLayout2"
+            android:id="@+id/linearLayout3"></View>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="24dp"
+            android:orientation="horizontal"
+            android:background="@color/white"
+            android:layout_below="@+id/linearLayout3"
+            android:layout_alignParentStart="true">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical|left"
+                android:paddingLeft="10dp"
+                android:text="新手标"
+                android:id="@+id/x_subject_tv_product_name"
+                android:textSize="12dp"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical|left"
+                android:paddingLeft="10dp"
+                android:text="|"
+                android:textSize="12dp"/>
+            <TextView
+                android:layout_weight="1"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical|left"
+                android:paddingLeft="10dp"
+                android:text="T+1计息"
+                android:textSize="12dp"/>
+            <cn.efunding.fund.view.RoundPregressBarView
+                android:id="@+id/roundProgressBar3"
+                android:layout_width="6dp"
+                android:layout_height="6dp"
+                fund:roundColor="@color/fund_yellow"
+                fund:roundProgressColor="@color/fund_yellow"
+                fund:roundWidth="3dp"
+                android:layout_marginRight="5dp"
+                fund:textColor="@color/fund_yellow"
+                fund:textIsDisplayable="false"
+                fund:textSize="1dp"
+                fund:text=""
+                android:gravity="center_vertical|right"
+                android:layout_gravity="center|right"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical|right"
+                android:layout_gravity="center_horizontal|right"
+                android:paddingRight="10dp"
+                android:text="一次还本付息"
+                android:textSize="12dp"/>
+
+
+        </LinearLayout>
+
+    </RelativeLayout>
 </LinearLayout>
