--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,10 @@
     <color name="fund_red">#ff4e49</color>
     <color name="fund_white">#fdfdfd</color>
     <color name="fund_background">#f8f8f8</color>
+    <color name="fund_yellow">#fdb437</color>
     <color name="separate_line">#e7e7e7</color>
     <color name="separate_line2">#d5d5d5</color>
+    <color name="white">#ffffff</color>
+    <color name="fund_gray">#eeeeee</color>
+    <color name="fund_deep_gray">#999999</color>
 </resources>
