--- a/app/src/main/res/layout/subject_x_module.xml
+++ b/app/src/main/res/layout/subject_x_module.xml
@@ -101,7 +101,7 @@
                         android:gravity="left"/>
                 </LinearLayout>
 
-            <cn.efunding.fund.view.RoundPregressBarView
+            <cn.efunding.fund.view.RoundProgressBarView
                 android:layout_gravity="center"
                 android:layout_marginRight="15dp"
                 android:id="@+id/roundProgressBar2"
@@ -160,7 +160,7 @@
                 android:paddingLeft="10dp"
                 android:text="T+1计息"
                 android:textSize="12dp"/>
-            <cn.efunding.fund.view.RoundPregressBarView
+            <cn.efunding.fund.view.RoundProgressBarView
                 android:id="@+id/roundProgressBar3"
                 android:layout_width="6dp"
                 android:layout_height="6dp"
