--- a/app/src/main/res/layout/subject_x_module.xml
+++ b/app/src/main/res/layout/subject_x_module.xml
@@ -80,12 +80,15 @@
                             android:paddingLeft="12dp"
                             android:text="99"
                             android:id="@+id/x_subject_tv_yeild"
+                            android:textColor="@color/fund_yellow"
                             android:textSize="40dp"/>
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="55dp"
                             android:text="%"
-                            android:textSize="14dp"/>
+                            android:id="@+id/x_subject_tv_yeild_percent"
+                            android:textColor="@color/fund_yellow"
+                            android:textSize="18dp"/>
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="55dp"
