--- a/app/src/main/res/layout/subject_y_module.xml
+++ b/app/src/main/res/layout/subject_y_module.xml
@@ -44,12 +44,15 @@
                         android:paddingLeft="12dp"
                         android:text="10~25"
                         android:id="@+id/y_subject_tv_yeild"
+                        android:textColor="@color/fund_red"
                         android:textSize="40dp"/>
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="55dp"
                         android:text="%"
-                        android:textSize="14dp"/>
+                        android:id="@+id/y_subject_tv_yeild_percent"
+                        android:textColor="@color/fund_red"
+                        android:textSize="18dp"/>
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="55dp"
